2004-10-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-toggle-header): Make it work even if
	there's no visible header.

2004-10-01  Kevin Greiner  <kgreiner@compsol.cc>

	* gnus-agent.el (gnus-agent-synchronize-group-flags): When
	necessary, pass full group name to gnus-request-set-marks.
	
2004-10-01  Simon Josefsson  <jas@extundo.com>

	* mailcap.el (mailcap-mime-data): Add pdf.  Remove non-free
	acroread.

2004-10-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* spam-report.el (spam-report-gmane): Fix interactive.

	* gnus-art.el (gnus-treat-body-boundary): Only do stuff under X. 

	* gnus-agent.el (gnus-agent-synchronize-flags-server): Be silent
	when writing file.
	(gnus-agent-synchronize-flags): Don't default to being
	interactive. 

2004-09-30  Simon Josefsson  <jas@extundo.com>

	* message.el (message-generate-hashcash): Add.
	(message-send-mail): Use it, call mail-add-payment.

2004-09-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-verify-bogofilter): -V, not -sV option

2004-09-28  Kevin Greiner  <kgreiner@compsol.cc>

	* gnus-agent.el (gnus-agent-synchronize-group-flags): Replaced
	gnus-requst-update-info with explicit code to sync the in-memory
	info read flags with the marks being sync'd to the backend.

	*gnus-util.el (gnus-pp): Added optional stream to match pp API.
	
2004-09-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-verify-bogofilter): new function
	(spam-check-bogofilter)
	(spam-bogofilter-register-with-bogofilter): use it
	(spam-verify-bogofilter): small fixes

2004-09-28  Simon Josefsson  <jas@extundo.com>

	* hashcash.el (hashcash-generate-payment): Revert.

2004-09-28  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): use
	gnus-extract-references instead of gnus-split-references

	* gnus-util.el (gnus-extract-references): new function, analogous
	to gnus-split-references but extracts only the message-ID without
	anything extra
